--- a/userStories/src/app/app.component.html
+++ b/userStories/src/app/app.component.html
@@ -4,13 +4,12 @@
     <app-user-sidenav></app-user-sidenav>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary" style="margin-bottom: 10px;">
-      <button mat-icon-button><mat-icon (click)="drawer.toggle()">menu</mat-icon></button>
+    <mat-toolbar color="primary" style="position: fixed; z-index: 2;">
+      <button mat-icon-button *ngIf="isUserAuthenticated"><mat-icon (click)="drawer.toggle()">menu</mat-icon></button>
       <span>User Stories</span>
     </mat-toolbar>
-    <router-outlet></router-outlet>
+    <div style="margin-top: 65px; z-index: 2;">
+      <router-outlet></router-outlet>
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
-
-
-
