--- a/userStories/src/app/user/user-posts/user-posts.component.html
+++ b/userStories/src/app/user/user-posts/user-posts.component.html
@@ -1,1 +1,19 @@
-<p>user-posts works!</p>
+<mat-tab-group mat-align-tabs="center">
+  <mat-tab label="User posts">
+    <app-post *ngFor="let post of userPosts" [post]="post"></app-post>
+  </mat-tab>
+  <mat-tab label="All posts">
+    <app-post></app-post>
+    <app-post></app-post>
+    <app-post></app-post>
+    <app-post></app-post>
+    <app-post></app-post>
+    <app-post></app-post>
+    <app-post></app-post>
+    <app-post></app-post>
+    <app-post></app-post>
+    <app-post></app-post>
+    <app-post></app-post>
+    <app-post></app-post>
+  </mat-tab>
+</mat-tab-group>
