--- a/userStories/src/app/user/user-posts/user-posts.component.css
+++ b/userStories/src/app/user/user-posts/user-posts.component.css
@@ -1,3 +1,4 @@
+
 ::ng-deep .mat-tab-body.mat-tab-body-active {
   overflow-y: hidden !important;
 }
@@ -8,8 +9,8 @@
 
 ::ng-deep .mat-tab-header {
   position: fixed !important;
-  width: 100%;
-  background: white;
-  padding: 0px;
   z-index: 2;
+  width: calc(100% - 300px);
+  top: 64px;
+  background: white;
 }
