--- a/userStories/src/app/auth/login/login.component.html
+++ b/userStories/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <mat-card style="max-width: 400px; width: 95%; margin: auto; margin-top: 100px;">
-  <mat-card-header>
+  <mat-card-header class="login-title">
     <mat-card-title>Login</mat-card-title>
   </mat-card-header>
   <mat-divider></mat-divider>
