Removed route guard from register. Removed margin from buttons in login form.

--- a/userStories/src/app/auth/login/login.component.html
+++ b/userStories/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-card style="max-width: 400px; width: 95%; margin: auto; margin-top: 100px;">
+<mat-card style="max-width: 500px; width: 95%; margin: auto; margin-top: 100px;">
   <mat-card-header class="login-title">
     <mat-card-title>Login</mat-card-title>
   </mat-card-header>
@@ -17,7 +17,7 @@
   <mat-card-actions>
     <button mat-raised-button class="full-width" color="primary" (click)="login()">Login</button>
     <hr>
-    <button mat-button class="full-width" (click)="goToRegister()">Register</button>
-    <button mat-button class="full-width" >Reset password</button>
+    <button mat-button class="full-width" style="margin: 0px;" (click)="goToRegister()">Register</button>
+    <button mat-button class="full-width" style="margin: 0px;">Reset password</button>
   </mat-card-actions>
 </mat-card>
