Added post form and backend logic to add new posts

--- a/userStories/src/app/user/user-sidenav/user-sidenav.component.html
+++ b/userStories/src/app/user/user-sidenav/user-sidenav.component.html
@@ -9,7 +9,7 @@
   <mat-list-option>
     <mat-icon mat-list-icon>home</mat-icon> Home
   </mat-list-option>
-  <mat-list-option>
+  <mat-list-option (click)="addPost()">
     <mat-icon mat-list-icon>add_circle</mat-icon>
     New post
   </mat-list-option>
