--- a/userStories/src/app/user/user-posts/form/form.component.html
+++ b/userStories/src/app/user/user-posts/form/form.component.html
@@ -1,1 +1,32 @@
-<p>form works!</p>
+
+<div class="container" style="margin-top: 20px;">
+  <mat-card>
+    <mat-card-header style="margin-bottom: 5px;">
+      <mat-card-title>Add a new story</mat-card-title>
+    </mat-card-header>
+    <mat-divider>
+    </mat-divider>
+    <mat-card-content style="margin-top: 10px;">
+      <form [formGroup]="newPostFormGroup" #registerForm>
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Title" name="title" formControlName="title">
+          <mat-error *ngIf="newPostFormGroup.get('title').invalid && newPostFormGroup.get('title').errors?.required">
+            Title is required
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Description" name="content" formControlName="content">
+          <mat-error *ngIf="newPostFormGroup.get('content').invalid && newPostFormGroup.get('content').errors?.required">
+            Description is required
+          </mat-error>
+        </mat-form-field>
+        <app-file-input [multiple]="true" (fileDone)="onFileDone($event)" (deleteFile)="onDeleteFile($event)"></app-file-input>
+        <!-- <input type="file" name="attachments" id="attachments" #attachments hidden> -->
+      </form>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="addStory()">Add</button>
+      <button mat-button color="warn">Cancel</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
