--- a/userStories/src/app/user/user-posts/post-full/post-full.component.html
+++ b/userStories/src/app/user/user-posts/post-full/post-full.component.html
@@ -9,7 +9,7 @@
     <mat-dialog-content cdkFocusInitial>
       <carousel [cellWidth]="'100%'" height="376" [dots]="true" *ngIf="post?.attachments?.collection?.elements?.length > 0">
         <div class="carousel-cell" *ngFor="let item of post?.attachments?.collection?.elements">
-          <img [src]="'https://localhost:8000/' + item.fileName" *ngIf="item.fileName.indexOf('jpg') !== -1" alt="2">
+          <img [src]="'https://localhost:8000/' + item.fileName" *ngIf="item.fileName.indexOf('mp4') === -1" alt="2">
           <video controls *ngIf="item.fileName.indexOf('mp4') !== -1">
             <source [src]="'https://localhost:8000/' + item.fileName" type="video/mp4">
           </video>
