--- a/userStories/src/app/app.component.html
+++ b/userStories/src/app/app.component.html
@@ -5,10 +5,10 @@
 </mat-toolbar>
 <mat-sidenav-container class="example-container" [hasBackdrop]="false">
   <mat-sidenav #drawer mode="side" style="width: 300px;" [disableClose]="true"  [opened]="isUserAuthenticated && !isMobile">
-    <app-user-sidenav [user]="user"></app-user-sidenav>
+    <app-user-sidenav [user]="user" (navigationStarted)="onNavigationStarted()"></app-user-sidenav>
   </mat-sidenav>
   <mat-sidenav-content>
-    <div style="z-index: 2;">
+    <div style="z-index: 2;" *ngIf="!loading">
       <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
