--- a/userStories/src/app/user/user-sidenav/user-sidenav.component.html
+++ b/userStories/src/app/user/user-sidenav/user-sidenav.component.html
@@ -2,14 +2,14 @@
   <div class="user-logo">
     <div class="img" [style.background-image]="profileImg"></div>
     <h3>{{ loggedinUser.username }}</h3>
-    <button mat-raised-button>Profile</button>
+    <button mat-raised-button (click)="goToProfile()">Profile</button>
   </div>
 </div>
-<mat-selection-list #shoes [multiple]="false">
-  <mat-list-option>
+<mat-selection-list #options [multiple]="false">
+  <mat-list-option [selected]="currentUrl === '/posts'" (click)="goToPosts()">
     <mat-icon mat-list-icon>home</mat-icon> Home
   </mat-list-option>
-  <mat-list-option (click)="addPost()">
+  <mat-list-option [selected]="currentUrl === '/post-form'" (click)="addPost()">
     <mat-icon mat-list-icon>add_circle</mat-icon>
     New post
   </mat-list-option>
@@ -18,3 +18,4 @@
     Logout
   </mat-list-option>
 </mat-selection-list>
+
