Removed Carousel. Removed UserProfile. Added bootstrap and ngbBootstrap Added new carousel. Added option to delete user post. Fixed tabs width when opening/closing sidenav.

--- a/userStories/src/app/app.component.css
+++ b/userStories/src/app/app.component.css
@@ -6,3 +6,10 @@
   right: 0;
   background: #eee;
 }
+
+@media (max-width: 500px) {
+  .example-container {
+    width: 100%;
+    top: 56px;
+  }
+}
