--- a/userStories/src/app/user/user-posts/post/post.component.html
+++ b/userStories/src/app/user/user-posts/post/post.component.html
@@ -8,16 +8,30 @@
   </mat-divider>
   <mat-card-content style="margin-top: 20px;">
     <p style="white-space: break-spaces;">{{ getContent() }}</p>
-    <carousel cellWidth="100%" height="376" [dots]="true" *ngIf="post?.attachments?.collection?.elements?.length > 0">
-      <div class="carousel-cell" *ngFor="let item of post?.attachments?.collection?.elements">
-        <img [src]="'https://localhost:8000/' + item.fileName" *ngIf="item.fileName.indexOf('mp4') === -1" alt="2">
-        <video controls *ngIf="item.fileName.indexOf('mp4') !== -1">
-          <source [src]="'https://localhost:8000/' + item.fileName" type="video/mp4">
-        </video>
-      </div>
-    </carousel>
+    <ngb-carousel [interval]="false" *ngIf="post?.attachments?.collection?.elements?.length > 0">
+      <ng-template ngbSlide *ngFor="let item of post?.attachments?.collection?.elements">
+        <div class="picsum-img-wrapper" style="z-index: 0; text-align: center;">
+          <img [src]="'http://192.168.100.12:8000/' + item.fileName" class="img-fluid" *ngIf="item.fileName.indexOf('mp4') === -1" alt="2">
+          <video controls *ngIf="item.fileName.indexOf('mp4') !== -1" class="img-fluid">
+            <source [src]="'http://192.168.100.12:8000/' + item.fileName" type="video/mp4">
+          </video>
+        </div>
+      </ng-template>
+    </ngb-carousel>
   </mat-card-content>
   <mat-card-actions style="text-align: right;">
+    <button mat-button color="warn" (click)="openDeleteDialog()" *ngIf="allowDelete">Delete</button>
     <button mat-button color="primary" (click)="openFullPost(post)">More</button>
   </mat-card-actions>
 </mat-card>
+
+<ng-template #deleteModal>
+  <h2 mat-dialog-title>Delete story?</h2>
+  <mat-dialog-content>This will delete the story and all the attachments and cannot be undone.</mat-dialog-content>
+  <mat-dialog-actions>
+    <button mat-button mat-dialog-close>Cancel</button>
+    <!-- The mat-dialog-close directive optionally accepts a value as a result for the dialog. -->
+    <button mat-button [mat-dialog-close]="true" color="warn">Delete</button>
+  </mat-dialog-actions>
+</ng-template>
+
